--- a/members/index.html
+++ b/members/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Members</title>
   </head>
   <body>
@@ -15,14 +16,27 @@
           <th>Active</th>
           <th>BirthDay</th>
           <th>Age</th>
-          <th>junior</th>
-          <th>senior</th>
+          <th>Agegroup</th>
           <th>email</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <table id="results">
+      <thead>
+        <tr>
+          <th>Dato</th>
+          <th>Medlem</th>
+          <th>Desciplin</th>
+          <th>Type</th>
+          <th>Tid</th>
         </tr>
       </thead>
       <tbody></tbody>
     </table>
 
     <script src="members.js" type="module"></script>
+    <script src="results.js" type="module"></script>
+    <script src="script.js" type="module"></script>
   </body>
 </html>
